# Geo-TinyLLaVA

./: README.md
InterGPS/: requirement.txt
InterGPS/symbolic_solver/: logic_parser.py
TinyLLaVA_Factory/: pyproject.toml
TinyLLaVA_Factory/scripts/train/: custom_finetune_0701.sh
TinyLLaVA_Factory/tinyllava/eval/: batch_eval_tinyllava.py  run_tiny_llava.py
TinyLLaVA_Factory/tinyllava/model/: merge_lora_model_and_save_0821.py
TinyLLaVA_Factory/tinyllava/model/llm/: openelm.py
